fix overflowing text

--- a/public/css/survival.css
+++ b/public/css/survival.css
@@ -48,7 +48,7 @@ body {
 }
 
 h1 {
-  width: 90vw;
+  width: 100%;
   height: 50%;
   /* padding: 0 10px; */
   font-size: 1.2rem;
@@ -107,7 +107,7 @@ button:active {
 @media screen and (min-width: 400px) {
   h1 {
     font-size: 1.2rem;
-    width: 65vw;
+    width: 95vw;
     margin-top: 50px;
   }
   button {
@@ -117,6 +117,7 @@ button:active {
 @media screen and (min-width: 500px) {
   h1 {
     font-size: 1.5rem;
+    width: 70vw;
   }
   button {
     font-size: 1.2rem;
@@ -125,6 +126,7 @@ button:active {
 @media screen and (min-width: 600px) {
   h1 {
     font-size: 1.8rem;
+    margin-top: 100px;
     height: 40vh;
   }
 }
